some style for correct displaying on mobile

--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -40,6 +40,10 @@
   margin-bottom: 1%;
 }
 
+.message {
+  font-size: 1em;
+}
+
 .form__message {
   display: flex;
   flex-direction: column;
