--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -4,7 +4,9 @@
 }
 
 .users__wrapper {
+  width: 100%;
   display: flex;
-  flex-direction: space-between;
+  flex-direction: row;
   flex-wrap: wrap;
+  justify-content: space-between;
 }
