--- a/src/components/common/Paginator/Paginator.module.css
+++ b/src/components/common/Paginator/Paginator.module.css
@@ -1,8 +1,7 @@
 .paginator {
   display: flex;
-  justify-content: space-between;
-
-  max-width: 100%;
+  justify-content: flex-start;
+  flex-wrap: wrap;
 }
 
 .page__selected {
